--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Nie-Mand/claas.git"
+  }
 }
