switching to NPM Registery

--- a/.github/workflows/publisher.yml
+++ b/.github/workflows/publisher.yml
@@ -13,8 +13,11 @@ jobs:
           node-version: 16
           registry-url: 'https://npm.pkg.github.com'
           scope: '@Nie-Mand'
-      - run: npm ci
-      - run: npm run rollup
-      - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Install dependencies
+        run: npm ci
+      - name: Build
+        run: npm run rollup
+      - name: Publish
+        uses: JS-DevTools/npm-publish@v1
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
