--- a/.github/workflows/publisher.yml
+++ b/.github/workflows/publisher.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build
-        run: npm run rollup
+        run: npm run build
       - name: Publish
         uses: JS-DevTools/npm-publish@v1
         with:
