--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "keywords": [
+    "claas", "tailwindcss", "react"
+  ]
 }
